--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/space-grotesk": "^0.2.0",
     "date-fns": "^2.28.0",
     "expo": "~44.0.0",
+    "expo-app-loading": "~1.3.0",
+    "expo-font": "~10.0.4",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
-    "tailwind-rn": "^3.0.1",
-    "react-native-svg": "12.1.1"
+    "tailwind-rn": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
