--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/space-grotesk": "^0.2.0",
+    "axios": "^0.24.0",
     "date-fns": "^2.28.0",
     "expo": "~44.0.0",
     "expo-app-loading": "~1.3.0",
@@ -21,6 +22,7 @@
     "react-native": "0.64.3",
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
+    "react-query": "^3.34.7",
     "tailwind-rn": "^3.0.1"
   },
   "devDependencies": {
