--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
     "react-query": "^3.34.7",
-    "tailwind-rn": "^3.0.1"
+    "tailwind-rn": "^3.0.1",
+    "expo-linking": "~3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
