--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-web": "0.17.1",
     "react-query": "^3.34.7",
     "tailwind-rn": "^3.0.1",
-    "expo-linking": "~3.0.0"
+    "expo-linking": "~3.0.0",
+    "expo-dev-client": "~0.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
